--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,8 @@ site_url: https://github.com/CyberSecAI/CyberSecAI.github.io
 # Page tree
 nav:
   - Home: index.md
+  - Introduction: 
+    - Introduction: introduction/Introduction.md
   - NotebookML:
     - NotebookML: NotebookML/NotebookML.md
     - NotebookML Vulnerability Standards: NotebookML/NotebookML_VulnerabilityStandards.md
