--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,8 @@ nav:
   - Prompting:
     - Prompt Engineering: prompt_engineering/prompt_engineering.md    
     - Fabric: prompt_engineering/Fabric.md    
+  - Vulnrichment:
+    - CISA Vulnrichment: Vulnrichment/Vulnrichment.md
   - Annex:
     - Glossary: annex/Glossary.md
     - Talks & Research: research/research.md
