--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
     - NotebookML Vulnerability Standards: NotebookML/NotebookML_VulnerabilityStandards.md
     - NotebookML CWE: NotebookML/NotebookML_Cwe.md
     - NotebookML CAPEC: NotebookML/NotebookML_Capec.md
+    - NotebookML ATTACK: NotebookML/NotebookML_Attack.md
     - NotebookML Config: NotebookML/NotebookML_Config.md
   - Prompting:
     - Prompt Engineering: prompt_engineering/prompt_engineering.md    
