--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,9 +16,10 @@ nav:
     - NotebookLM ATTACK: NotebookLM/NotebookLM_Attack.md
     - NotebookLM Config: NotebookLM/NotebookLM_Config.md
     - NotebookLM Secure Code: NotebookLM/NotebookLM_Secure_Code.md
-  - Closed Grounded System: 
+  - Grounded Closed System: 
     - Grounding: Grounded/grounding.md
     - ChatGPT CWE GPT: Grounded/cwe_gpt.md
+    - Vertex AI Agent: Grounded/vertex_ai.md
   - Prompting:
     - Prompt Engineering: prompt_engineering/prompt_engineering.md    
     - Fabric: prompt_engineering/Fabric.md    
