--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,37 @@
-aiohttp==3.9.3
-aiosignal==1.3.1
-attrs==23.2.0
-Babel==2.14.0
-cairocffi==1.6.1
-CairoSVG==2.7.1
-certifi==2024.7.4
-cffi==1.16.0
+babel==2.16.0
+beautifulsoup4==4.12.3
+certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-cssselect2==0.7.0
-defusedxml==0.7.1
-frozenlist==1.4.1
+EditorConfig==0.12.4
 ghp-import==2.1.0
-idna==3.6
-Jinja2==3.1.3
-Markdown==3.5.2
+idna==3.8
+Jinja2==3.1.4
+jsbeautifier==1.15.1
+Markdown==3.7
 markdown-include==0.8.1
 MarkupSafe==2.1.5
 mergedeep==1.3.4
-mkdocs==1.5.3
-mkdocs-glightbox==0.3.7
-mkdocs-linkcheck==1.0.6
-mkdocs-material==9.5.7
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.5.33
 mkdocs-material-extensions==1.3.1
-mkdocs-print-site-plugin==2.3.6
-multidict==6.0.5
-packaging==23.2
-paginate==0.5.6
+mkdocs-mermaid2-plugin==1.1.1
+mkdocs-print-site-plugin==2.5.0
+packaging==24.1
+paginate==0.5.7
 pathspec==0.12.1
-pillow==10.2.0
-platformdirs==4.2.0
-pycparser==2.21
-Pygments==2.17.2
-pymdown-extensions==10.7
-python-dateutil==2.8.2
-PyYAML==6.0.1
+platformdirs==4.2.2
+Pygments==2.18.0
+pymdown-extensions==10.9
+python-dateutil==2.9.0.post0
+PyYAML==6.0.2
 pyyaml_env_tag==0.1
-regex==2023.12.25
-requests==2.31.0
+regex==2024.7.24
+requests==2.32.3
+setuptools==74.0.0
 six==1.16.0
-tinycss2==1.2.1
-urllib3==2.2.0
-watchdog==3.0.0
-webencodings==0.5.1
-yarl==1.9.4
+soupsieve==2.6
+urllib3==2.2.2
+watchdog==5.0.0
