--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,9 @@ nav:
     - CrewAI: agents/Crewai.md
   - TopicModeling:
     - BertTopic: TopicModeling/BertTopic.md
+  - References:
+    - Learning: learning/learning.md
+    - Research: research/research.md
   - Annex:
     - Glossary: annex/Glossary.md
     - Talks & Research: research/research.md
