--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,12 +31,14 @@ nav:
   - Software Engineering:
     - Software Engineering: software/introduction.md
     - Example: software/example.md
+    - Software Artifacts: software/software_artifacts.md
+    - Coding:
+        - Code Assistant vs. Autonomous Coding Agents: software/code/code_assistant_agents.md
+        - Leaderboards: software/code/leaderboards.md
   - CyberSecurity Models:
     - CyberSecurity LLMs: cti_models/cyber_security_models.md
-  - Agents:
     - Agents: agents/Agents.md
     - Build Agents: agents/Build_agents.md
-    - CrewAI: agents/Crewai.md
   - TopicModeling:
     - BertTopic: TopicModeling/BertTopic.md
   - References:
