--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
     - Leaderboards: software/code/leaderboards.md
     - Software Engineering Agents Report: software/swe_agents_report.md
     - Software Engineering Agents: software/swe_agents.md    
+    - Software Engineering 1.0 Redux: software/swe_redux.md    
   - CyberSecurity Models:
     - CyberSecurity LLMs: cti_models/cyber_security_models.md
     - Agents: agents/Agents.md
