--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
     - Software Engineering Agents Report: software/swe_agents_report.md
     - Software Engineering Agents: software/swe_agents.md    
     - Software Engineering 1.0 Redux: software/swe_redux.md    
+    - Threat Model: software/threat_model.md    
   - CyberSecurity Models:
     - CyberSecurity LLMs: cti_models/cyber_security_models.md
     - Agents: agents/Agents.md
