--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,10 +33,11 @@ nav:
     - Software Engineering: software/introduction.md
     - Software Assurance: software/software_assurance.md
     - Software Artifacts: software/software_artifacts.md
-    - Code Assistant vs. Autonomous Coding Agents: software/code/code_assistant_agents.md
-    - Leaderboards: software/code/leaderboards.md
-    - Software Engineering Agents Report: software/swe_agents_report.md
-    - Software Engineering Agents: software/swe_agents.md    
+    - Software Engineering Agents:
+      - Code Assistant vs. Autonomous Coding Agents: software/code/code_assistant_agents.md
+      - Software Engineering Agents Report: software/swe_agents_report.md
+      - Software Engineering Agents: software/swe_agents.md    
+      - Leaderboards: software/code/leaderboards.md
     - Software Engineering 1.0 Redux:
         - Software Engineering 1.0 Redux: software/swe_redux.md    
         - Software Engineering Security: software/swe_redux_security.md        
