Add comprehensive DARPA AI Cyber Challenge tools comparison
- Add new aixcc.md documentation with detailed analysis of all 7 finalist teams and their automated cyber reasoning systems
- Update swe_redux_security.md with additional content
- Configure mkdocs.yml to include the new AIxCC tools comparison page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,7 +40,8 @@ nav:
       - Leaderboards: software/code/leaderboards.md
     - Software Engineering 1.0 Redux:
         - Software Engineering 1.0 Redux: software/swe_redux.md    
-        - Software Engineering Security: software/swe_redux_security.md        
+        - Software Engineering Security: software/swe_redux_security.md  
+        - AIxCC: software/aixcc.md      
         - Threat Model: software/threat_model.md    
         - Claude Code: software/claude_code.md
   - CyberSecurity Models:
